# keyboard-labs

./: .envrc  .gitignore  .gitmodules  README.MD  devenv.nix  flake.nix  ibom-keyboard-100x100-minif4-dual-rgb-reversible-rev2021.5.html  ibom-keyboard-ch552-36-rev2023.1.html  ibom-keyboard-ch552-44-rev2023.1a.html  ibom-keyboard-ch552-44-rev2023.2.html  ibom-keyboard-ch592-60-rev2024.2.html  ibom-keyboard-pico42-rev2023.1.html  ibom-keyboard-pico42-rev2023.2.html  ibom-keyboard-wabble-60-rev2024.2.html  ibom-keyboard-x2-lumberjack-arm-hsrgb-rev2022.1.html  ibom-keyboard-x2-lumberjack-arm-rev2022.1.html  ibom-x1-minif4_36-rev2021.5-basic.html  ibom-x1-minif4_36-rev2021.5.html  ibom-x2-lumberjack-arm-rev2021.1.html  ibom-x2-lumberjack-arm-revrev2021.1.html  index.html  treefmt.nix  treefmt.toml
cad/: .gitignore  gh60_edge_cuts.scad  keyboard-ch552_36-pcb_outline.scad  keyboard_tenting_stand.scad  keyboard_tenting_stand_3d.scad  keycap_storage.scad  kicad_pcb_geometry.scad  layered_case-gh60-render_bottom_plate.scad  layered_case-gh60.scad  layered_case.scad  mba_plate.scad
docs/: buildguide-keyboard_ch552-44-rev2023.1a.md  buildguide-keyboard_ch552-44-rev2023.2.md  buildguide-keyboard_pico42-rev2023.1.md  buildguide_rev2021.4_budget.md  buildguide_wabble-60_rev2024.2.md  guide-liveiso-flashing-fak.md  logic-level-shifting-3v3-to-5v-using-fet.sch  logic-level-shifting-using-sn74lvc1t45dbv.pro  logic-level-shifting-using-sn74lvc1t45dbv.sch  nix-classic-usage.md  nix-flake-usage.md  pcb-rivets.md  rgb-leds-logic-level-shifting.md  rp2040-flashing-and-bootloaders.md  socketing-devboards.md  soldering-tools.md  stm32-flashing-and-bootloaders.md
firmware/keyberon/: .embed.toml  .gitignore  Cargo.toml  Makefile  README.md  build-and-objcopy.rev2020.1.sh  build-and-objcopy.sh  build.rs  flake-module.nix  flake.nix  justfile  rustflags-ld-stm32f4xx.rc  rustflags-ld-tinyuf2.rc
firmware/keyberon/.cargo/: config
firmware/keyberon/examples/: rtic-blinky-timer-irq-tim2.rs  rtic-blinky-timer-irq-tim3.rs  rtic-usb-serial-irq.rs
firmware/keyberon/ld/stm32f4xx-tinyuf2/: memory.x
firmware/keyberon/rp2040/: Cargo.toml
firmware/keyberon/rp2040/.cargo/: config
firmware/keyberon/rp2040/examples/: rp2040-rtic-usb-serial-irq.rs
firmware/keyberon/rp2040/src/: app_init.rs  app_prelude.rs  common.rs  input.rs  keyboards.rs  lib.rs
firmware/keyberon/rp2040/src/pinout/: pykey40.rs
firmware/keyberon/src/: app_init.rs  app_prelude.rs  common.rs  direct_pin_matrix.rs  input.rs  layouts.rs  lib.rs  main.rs  matrix.rs  pinout.rs  rev2021_5.rs  serial.rs  split.rs  split_app_prelude.rs  usb_serial.rs  usbd_hid.rs
firmware/keyberon/src/layouts/: actions.rs  common.rs  macros.rs  minif4_36.rs  ortho_5x12.rs  pico42.rs  planck_mit.rs  split_3x5_3.rs
firmware/keyberon/src/layouts/common/: segments.rs
firmware/keyberon/src/layouts/ortho_5x12/: rgoulter.rs
firmware/keyberon/src/layouts/split_3x5_3/: rgoulter.rs
firmware/keyberon/src/pinout/: minif4_36.rs
firmware/keyberon/src/pinout/minif4_36/: rev2021_5.rs
firmware/keyberon/src/pinout/minif4_36/rev2021_4/: lhs.rs  rhs.rs
firmware/keyberon/src/pinout/minif4_36/rev2021_5/: lhs.rs  rhs.rs
firmware/keyberon/src/pinout/x_2/: rev2021_1.rs
firmware/keyberon/src/rev2020_1/: direct_pins.rs  mod.rs  pin_layout_lhs.rs  pin_layout_rhs.rs
firmware/keyberon/src/rev2021_1/: mod.rs  pin_layout_lhs.rs  pin_layout_rhs.rs
firmware/keyberon/src/rev2021_5/: pin_layout_lhs.rs  pin_layout_rhs.rs
firmware/keyberon/src/split/: app_prelude.rs  input.rs  transport.rs
firmware/keyberon/stm32f4/: Cargo.toml
firmware/keyberon/stm32f4/examples/: rtic-usb-serial-irq.rs
firmware/keyberon/stm32f4/src/: app_init.rs  app_prelude.rs  common.rs  lib.rs
firmware/keyberon/stm32f4/src/keyboards/: minif4_36.rs  x_2.rs
firmware/keyberon/stm32f4/src/keyboards/minif4_36/rev2021_4/: lhs.rs  rhs.rs
firmware/keyberon/stm32f4/src/keyboards/minif4_36/rev2021_5/: lhs.rs  rhs.rs
firmware/keyberon/stm32f4/src/keyboards/x_2/: rev2021_1.rs
firmware/keyberon/stm32f4/src/pinout/: minif4_36.rs
firmware/keyberon/stm32f4/src/pinout/minif4_36/rev2021_4/: lhs.rs  rhs.rs
firmware/keyberon/stm32f4/src/pinout/minif4_36/rev2021_5/: lhs.rs  rhs.rs
firmware/keyberon/stm32f4/src/pinout/x_2/: rev2021_1.rs
firmware/keyberon/stm32f4/src/split/: app_init.rs  app_prelude.rs  transport.rs
pcb/: .gitignore  MCU_RaspberryPi_RP2040.kicad_sym  Makefile  ProjectLocal.dcm  ProjectLocal.kicad_sym  ProjectLocal.lib  config.kibot.yaml  daughterboard_adapter_upgrade-to-rev2021.2-from-rev2020.1.kicad_pcb  daughterboard_adapter_upgrade-to-rev2021.2-from-rev2020.1.pro  daughterboard_adapter_upgrade-to-rev2021.2-from-rev2020.1.sch  daughterboard_adapter_upgrade-to-rev2021.2-from-rev2021.1.1.kicad_pcb  daughterboard_adapter_upgrade-to-rev2021.2-from-rev2021.1.1.sch  default.nix  (+106 more)
(+281 files in other folders)
