[package]
name = "keyboard-labs-keyberon"
version = "0.1.0"
authors = ["Richard Goulter <rchard.goulter@gmail.com>", "Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f4xx-hal = { version = "0.17", features = ["rt", "stm32f401", "usb_fs"] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-rtic = "1.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", branch = "master" }
embedded-hal = "0.2"
frunk = { version = "0.4", default-features = false }
generic-array = "0.14"
heapless = "0.7"
nb = "1.1"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4"
usb-device = { version = "0.2.0", features = ["control-buffer-256"] }
usbd-human-interface-device = "0.4"
usbd-serial = "0.1"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
