[package]
name = "keyboard-labs-keyberon-rp2040"
version = "0.1.0"
authors = ["Richard Goulter <richard.goulter@gmail.com>", "Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
rp-pico = "0.8"
rp2040-hal = "0.9"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
keyboard-labs-keyberon = { path = ".." }
rp2040-boot2 = { version = "0.3.0" }
# rp2040-pac = { version = "= 0.5.0" }
rp2040-monotonic = "1.3"

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
cortex-m-rtic = { workspace = true }
keyberon = { workspace = true }
# embedded-hal = { workspace = true }
fugit = { workspace = true }
frunk = { workspace = true }
generic-array = { workspace = true }
heapless = { workspace = true }
nb = { workspace = true }
panic-halt = { workspace = true }
panic-rtt-target = { workspace = true }
rtt-target = { workspace = true }
usb-device = { workspace = true }
usbd-human-interface-device = { workspace = true }
usbd-serial = { workspace = true }
